@@ -17,6 +17,8 @@ import gst
 from flumotion.component import feedcomponent
 
 class ASFMuxer(feedcomponent.MultiInputParseLaunchComponent):
+    checkOffset = True
+
     def do_check(self):
         self.debug('running fluasfmux check')
         from flumotion.worker.checks import check
