@@ -1,3 +1,11 @@
+2007-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/encoders/wma/wma.py:
+	* flumotion/component/encoders/wmv/wmv.py:
+	* flumotion/component/muxers/asf/asf.py:
+	  Encoders can check both offset and timestamp.  Muxer can check
+	  timestamp.
+
 2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/encoders/wma/wma.py:
